# atari

./: .gitignore  GITHUB_SETUP.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
agents/: __init__.py  base_agent.py  dqn_agent.py  random_agent.py
docs/: index.html
environments/: __init__.py  atari_wrapper.py  env_configs.py
notebooks/: exploration.ipynb
scripts/: create_graph.py  evaluate.py  test_setup.py  train.py
tests/: __init__.py  test_environment.py
utils/: __init__.py  logger.py  replay_buffer.py  visualizer.py
